--- a/graph/index.html
+++ b/graph/index.html
@@ -14,6 +14,11 @@
 		<script type="text/javascript" src="jquery-ui.min.js"></script>
 		<script type="text/javascript" src="tooltip.js"></script>
 		<script type="text/javascript" src="main.js"></script>
+		<style type="text/css">
+			a{
+				text-decoration: none;
+			}
+		</style>
 	</head>
 	<body>
 		<ul>
