--- a/graph/index.html
+++ b/graph/index.html
@@ -16,7 +16,7 @@
 		<script type="text/javascript" src="main.js"></script>
 		<style type="text/css">
 			a{
-				text-decoration: none;
+				text-decoration: none!important;
 			}
 		</style>
 	</head>
