--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<title>Tricks</title>
 		<link rel="icon" type="image/x-con" href="favicon.ico">
+		<style type="text/css">
+			a{
+				text-decoration: none!important;
+			}
+		</style>
 	</head>
 	<body>
 		<section>
