--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<h4><a href="zoom/index.html">Zoom on hover</a></h4>
 					<div>
 						<p>
-							When you over on a thumbnail image, you can see a magnified version of the image on the right hand side
+							When you hover on a thumbnail image, you can see a magnified version of the image on the right hand side
 						</p>
 					</div>
 				</li>
@@ -28,7 +28,7 @@
 					<div>
 						<p>
 							When you hover on ratings of a product, you can see a popover showing the different ratings of that product.
-							You can then move the cursor to the pop over and then hover it on top of the 5 stars or the 4 stars link and you see a tooltip descibing the percentage of ratings
+							You can then move the cursor to the pop over and then hover it on top of the 5 stars or the 4 stars link and you see a tooltip describing the percentage of ratings
 						</p>
 					</div>
 			</ul>	
