--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@
 
 				<li>
 					<h4><a href="graph/index.html">Pop over of ratings</a></h4>
-				</li>
 					<div>
 						<p>
 							When you hover on ratings of a product, you can see a popover showing the different ratings of that product.
 							You can then move the cursor to the pop over and then hover it on top of the 5 stars or the 4 stars link and you see a tooltip describing the percentage of ratings
 						</p>
 					</div>
+				</li>
+				
+				<li>
+					<h4><a href="pop_over_with options_and_suboptions/index.html">Pop over menu with submenu</a></h4>
+					<div>
+						<p>
+							There's menu anchor and you can pop over on it to get a submenu. Further poping over on the submenu again shows submenu for the submenu
+						</p>
+					</div>
+				</li>
 			</ul>	
 		</section>
 		
